--- a/nyc-events-calendar-app/package.json
+++ b/nyc-events-calendar-app/package.json
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://TheLovelyPene.github.io/nyc-events-calendar-app",
+  "homepage": "https://thelovelypene.github.io/active_calendar/",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
